syntax = "proto3";

package translation;

service Translator {
  rpc Translate (TranslateRequest) returns (TranslateResponse);
}

message TranslateRequest {
  string text = 1;
  string target_lang = 2;
}

message TranslateResponse {
  string translated_text = 1;
}
